# metal-practice

./: CMakeLists.txt  README.md  build.sh
src/: CMakeLists.txt  main.cpp
src/glfw/: glfw_handler.hpp  glfw_wrapper.hpp
src/interface/: interface_graphics_handler.hpp
src/metal/: metal_handler.cpp  metal_handler.hpp  metal_layer.cpp  metal_layer.hpp
src/ns/: ns_view.cpp  ns_view.hpp  ns_window.cpp  ns_window.hpp
